--- a/src/data/grammar/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/mtg-card-of-the-day.yaml
@@ -5,8 +5,14 @@ cotdImage:
   - "[_cardType:aura,equipment][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cotdDescription:#cotdAuraOrEquipmentDescription#][_cotdImgUrl:#_cardImgUrl1#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
   - "[#searchableCardCategory#][#cotdCardCategorySearch#][_cotdDescription:#cotdTextDescription#][_title:#cotdTitle#]#_title#: #_cardname##cotdImageHtml#"
 
+cotdCardTypeSearch: "[_cardType:#cardTypes#][#_cardType.cardSearchByType#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
 cotdCreatureTypeSearch: "[_creatureType:#creatureTypes#][#_creatureType.cardSearchByType#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
 cotdCardCategorySearch: "[_cardText:#_cardCategorySearchTerm#][#_cardText.cardSearchByText#][_cardname:#_cardName1#][_cardcolor:#_cardColor1#][_cotdImgUrl:#_cardImgUrl1#]"
+
+cotdParameterizedCardSearch:
+  - "[#cotdCardTypeSearch#][_cardDesc:#_cardType#]"
+  - "[#cotdCreatureTypeSearch#][_cardDesc:#_creatureType#]"
+  - "[#cotdCardCategorySearch#][_cardDesc:#_cardCategory#]"
 
 searchableCardCategory:
   - "[_cardCategory:removal spell][_toughness:1,2,3,4,5,X][_cardCategorySearchTerm:\"destroy target creature\",\"exile target creature\",\"enchanted creature can't attack\",\"fights target\",\"damage to target creature\",\"sacrifices a creature\",\"/-#_toughness# until\",\"enchanted creature doesn't\"]"
@@ -16,7 +22,7 @@ searchableCardCategory:
   - "[_cardCategory:discard spell][_cardCategorySearchTerm:\"discards a card\",\"discards that card\"]"
   - "[_cardCategory:counterspell][_cardCategorySearchTerm:\"counter target\"]"
   - "[_cardCategory:direct damage spell,burn spell][_cardCategorySearchTerm:\"damage to target\"]"
-  - "[_cardCategory:ramp spell][_cardCategorySearchTerm:\"land card and put that card onto\",\"put them onto\",\"land card and put it onto\",\"#basicLands# card and put it onto\",\"#basicLands# card and put that card onto\"]"
+  - "[_cardCategory:ramp spell][_cardCategorySearchTerm:\"land card and put that card onto\",\"put them onto\",\"land card and put it onto\",\"forest card and put it onto\",\"forest card and put that card onto\"]"
   - "[_cardCategory:lifegain spell][_amount:1,2,3,4,5,6,7,8,10,20,X][_cardCategorySearchTerm:\"gain life\",\"gain #_amount# life\"]"
   - "[_cardCategory:cantrip][_cardCategorySearchTerm:\"draw a card.\"]"
   - "[_cardCategory:slowtrip][_cardCategorySearchTerm:\"draw a card at the beginning\"]"
@@ -29,10 +35,11 @@ cotdImageCustom: "#cotdImageHtml#"
 
 cotdTitle:
   - CARD OF THE DAY
+
 cotdDescription:
-  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword# coming back, we can't really promise that any keyword is off the menu moving forward."
+  - "This blast from the [_time:future,past,future,past,present,distant future,distant past]#_time# is back, and it's still the only way for a player to #marginalThingToDo#! Although with #keyword# coming back, we can't promise that any keyword is really off the menu moving forward."
   - "When your opponent plays #kindaGood.a# spell, your first #cardWhichDrawsCards# is probably to try to cause them to have #cardWhichCountersSpells.a#."
-  - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that it means there's a legendary #creatureTypes.capitalize# token to be had. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
+  - "This card seems [_kindaGood:#kindaGood#]#_kindaGood#...until you realize that #surprisingResult#. Then it [_result:becomes #reallyGood#,seems really #_kindaGood#]#_result#."
   - "Every player aspires to have as many #_cardname.s# as they have #colors# #deckArchOrCategory# decks."
   - "#multicolor# #deckLimitedArchetype.capitalize# may be the favored deck for this color combo, but that doesn't mean #multicolor# #keyword# isn't always happy to have another tool in its [_toolbox:back pocket,arsenal,toolbox,kit,playbook]#_toolbox#!"
 
@@ -41,19 +48,19 @@ cotdCreatureTypeNeedsWork:
 
 cotdTextDescription:
   - "It's no surprise that #_cardcolor.capitalize#'s [_superlative:#cardSuperlative#,second-#cardSuperlative#]#_superlative# #_cardCategory# finds its way into almost every [_decktype:#format#,#deckArchOrCategory#]#_decktype# deck that can host it. Plus it [_verbs:offers,enables,makes possible]#_verbs# some of the most #interestingPlay# the game has ever seen."
-  - "[_search:[#cotdCreatureTypeSearch#][_cardDesc:#_creatureType#],[#cotdCardCategorySearch#][_cardDesc:#_cardCategory#]][#_search#]This versatile #_cardDesc# has already shown itself as an all-star of the new metagame. Check out the Pro Tour this weekend to see if the #deckArchOrCategory# dominance continues!"
+  - "[#cotdParameterizedCardSearch#]This versatile #_cardDesc# has already shown itself as an all-star of the new metagame. Check out the Pro Tour this weekend to see if the #deckArchOrCategory# dominance continues!"
 
 cotdAuraOrEquipmentDescription:
-  - "Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to stick some #massNoun#-infused [_equipmentPart:#bodypart# armor,blades,spikes]#_equipmentPart# onto what appears to be a [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll]#_verb# into battle."
+  - "Long ago, [_adj:inventive,resourceful,desparate,clever,crafty,beleagured]#_adj.a# #creatureTypes# decided to stick some #massNoun.hyphenate#-infused [_equipmentPart:#bodypart# armor,blades,spikes,bracers,pauldrons,gauntlets,rivets,ribbons,pinstripes,toothpicks,pipe cleaners,pom poms,rhinestones]#_equipmentPart# onto what appears to be a [_surface:#itemNoun#,pair of #itemNoun.s#]#_surface#. Today, almost every #characterClass# [_worn:has donned,has worn,wields,sports]#_worn# [_theArmor:one of these,a pair]#_theArmor# to #creatureActionVerb# as they [_verb:dash,rumble,rush,roll]#_verb# into battle."
 
 cotdCreatureTypeDescription:
  - "Only on #plane# would people see this #adjImpressive# #_creatureType# and nickname it [_nickname:The #adj.capitalizeAll.hyphenate# #characterClass.capitalizeAll#,#planeswalkerFirstName#'s #characterClass.capitalizeAll#]“#_nickname#”."
- - "Now that we know that this #_creatureType# is the [_source:creator,progenitor,source]#_source# of all #_creatureType#kind across the multiverse (even #tribalCreature#), does that mean that every #_creatureType# is a [_minionTitle:Scion of the #_cardname#,Spawn of #_cardname#,Minion of #_cardname#, #_cardname.hyphenate#'s Faithful']#_minionTitle#?"
- - "#_creatureType.capitalize.s# may not ascend to #characterClass.hyphenate#hood very often, but when they do, the results tend to be[_adv:, really, pretty, extremely, surprisingly] #adj#."
+ - "Now that we know that this #_creatureType# is the [_source:creator,progenitor,source]#_source# of all #_creatureType#kind across the multiverse (even #tribalCreature#), does that mean that every #_creatureType# is a [_minionTitle:Scion of the #_cardname#,Spawn of #_cardname#,Minion of #_cardname#, #_cardname.hyphenate#'s Faithful]#_minionTitle#?"
+ - "#_creatureType.capitalize.s# may not ascend to #characterClass.hyphenate#hood very often, but when they do, the results tend to be[_adv:, really, pretty, extremely, surprisingly, quite, truly] #adj#."
  - "If you're looking for an impressive bomb in #teaserCardSet# limited, look no further than this #adj# #_creatureType#."
- - "Things took a dark turn [_where:at the #storyLocation# #placeNoun#,in #minorStoryLocation#,in #nonPlaneLocation#]#_where# after this #_creatureType# learned they had run out of [_item:#itemNoun.s#,#massNoun#]#_item#."
+ - "Things took a dark turn [_where:at the #storyLocation# #placeNoun.capitalize#,in #minorStoryLocation#,in #nonPlaneLocation#]#_where# after this #_creatureType# learned they had run out of [_item:#itemNoun.s#,#massNoun#]#_item#."
  - "#_creatureType.capitalize# tribal, meet #format#. We've wanted to introduce you two for a while, and we thought [_adj:loving,friendly,abundant,populated,inhabited][_where:the #_creatureType#-#_adj# plane of #plane#,#teaserCardSet#]#_where# would be the perfect place for you to meet."
- - "If you're looking to beef up #character#'s tribal support next [_date:business day,weekend,week,month,week,month,year,year,decade,century]#_date#, make sure to look at the #_creatureType.capitalizeAll# tribal pushes [_futureSet:#teaserCardSet#,#novelCardSetName#][_madeOrAreMaking:we made back in #cardSet# and #cardSet#,we're making in #_futureSet#]#_madeOrAreMaking#."
+ - "If you're looking to beef up #character#'s tribal support next [_date:business day,weekend,week,month,week,month,year,year,decade,century]#_date#, make sure to look at the #_creatureType.capitalizeAll# tribal pushes [_futureSet:#teaserCardSet#,#novelCardSetName#][_madeOrAreMaking:we made back in #cardSet# and #cardSet#,we're making in #_futureSet.capitalizeAll#]#_madeOrAreMaking#."
 
 cardSuperlative:
 - most versatile
@@ -145,13 +152,14 @@ tribalCreature:
 kindaGood:
   - good
   - great
-  - ok
+  - okay
   - spicy
   - ridiculous
   - terrible
   - mildly interesting
   - bewildering
   - unimpressive
+  - reasonable
 
 reallyGood:
   - wonderful
@@ -170,13 +178,23 @@ marginalThingToDo:
   - combine two cards together in one sleeve
   - rotate cards through space and time to reveal their secret third side
   - conditionally gain one life
-  - swap the order of layer 3 and 5
+  - swap the order of layers 3 and 5
   - draw one card, then put it back
   - "reveal the [_where:top,bottom,first,last,middle]#_where# card #cardLocation#"
   - "continue [_acting:drawing cards,gaining life,playing lands,talking,shuffling,blocking,searching their library]#_acting# after losing the game"
   - reduce the casting cost of red enchantments by 1 generic mana
-  - delay combo kills by precisely 2 turns
+  - delay combo kills by precisely #count# turns
   - "destroy #cardCategory.s# in #colors#"
+  - peek at the top card of your library
+
+surprisingResult:
+  - "it means there's a legendary #creatureTypes.capitalize# token to be had"
+  - "it allows you to play #cardCategory.a# for free"
+  - "it's the only card in Magic that lets you #marginalThingToDo#"
+  - "it can let you take up to #count# extra turns"
+  - "you get to return it to your hand"
+  - "you can combo it with #cardAlone#."
+  - "it's going to be #rarity.a# in #teaserCardSet.capitalizeAll#"
 
 cardWhichDrawsCards:
   - Impulse
