--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -356,7 +356,7 @@
       "Wood Elemental"
   ],
   "realObscureCard": [
-    "Arcum's Whistle",,
+    "Arcum's Whistle",
     "Bamboozle",
     "Chaos Harlequin",
     "Cognivore",
